--- a/.env
+++ b/.env
@@ -1,7 +1,32 @@
+# Rento 开发环境配置
+# 当前环境：本地开发 (Ubuntu 24)
+# 容器运行时：推荐使用 Podman
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# ===========================================
+# 数据库配置 - 开发环境使用 SQLite
+# ===========================================
 DATABASE_URL="file:./dev.db"
+
+# ===========================================
+# 应用基础配置
+# ===========================================
+NODE_ENV=development
+PORT=3001
+NEXTAUTH_URL=http://localhost:3001
+NEXTAUTH_SECRET=dev-secret-key-change-in-production
+
+# ===========================================
+# 开发环境特定配置
+# ===========================================
+# 开发模式下的日志级别
+LOG_LEVEL=debug
+
+# 开发环境监控 (可选)
+ENABLE_MONITORING=false
+PERFORMANCE_MONITORING=false
