--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,36 @@
+# Rento 房屋租赁管理系统 - 容器编排配置
+# 兼容 Docker Compose 和 Podman Compose
+# 推荐使用: podman-compose up -d
+# 备选使用: docker-compose up -d
+
 version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: runner
+    # 使用预构建的镜像，支持多架构 (amd64/arm64)
+    image: ghcr.io/hellocplusplus0/rento:latest
+    container_name: rento-app-1
     ports:
       - "3001:3001"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=${NODE_ENV:-production}
       - DATABASE_URL=postgresql://rento:${POSTGRES_PASSWORD}@postgres:5432/rento_production
       - BACKUP_DIR=/app/backups
       - LOG_DIR=/app/logs
-      - NEXTAUTH_URL=http://localhost:3001
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3001}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
+      - ENABLE_MONITORING=${ENABLE_MONITORING:-true}
+      - PERFORMANCE_MONITORING=${PERFORMANCE_MONITORING:-true}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     volumes:
       - ./backups:/app/backups
       - ./logs:/app/logs
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
     restart: unless-stopped
     networks:
       - rento-network
@@ -32,10 +42,12 @@ services:
       start_period: 40s
 
   postgres:
+    # PostgreSQL 16 数据库服务
     image: postgres:16-alpine
+    container_name: rento-postgres-1
     environment:
-      - POSTGRES_DB=rento_production
-      - POSTGRES_USER=rento
+      - POSTGRES_DB=${POSTGRES_DB:-rento_production}
+      - POSTGRES_USER=${POSTGRES_USER:-rento}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
     volumes:
@@ -43,9 +55,9 @@ services:
       - ./backups:/backups
       - ./scripts/init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U rento -d rento_production"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-rento} -d ${POSTGRES_DB:-rento_production}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -53,6 +65,7 @@ services:
     restart: unless-stopped
     networks:
       - rento-network
+    # PostgreSQL 性能优化配置
     command: >
       postgres
       -c shared_preload_libraries=pg_stat_statements
@@ -67,11 +80,13 @@ services:
       -c random_page_cost=1.1
       -c effective_io_concurrency=200
 
+  # Nginx 反向代理 (生产环境可选)
   nginx:
     image: nginx:alpine
+    container_name: rento-nginx-1
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
@@ -81,24 +96,43 @@ services:
     restart: unless-stopped
     networks:
       - rento-network
+    # 仅在需要时启用 (可通过环境变量控制)
+    profiles:
+      - nginx
+      - production
 
+  # Redis 缓存服务 (可选)
   redis:
     image: redis:7-alpine
+    container_name: rento-redis-1
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
     networks:
       - rento-network
+    # Redis 配置优化
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
+# 数据卷配置
 volumes:
   postgres_data:
     driver: local
+    # Podman 兼容性：使用本地驱动
   redis_data:
     driver: local
 
+# 网络配置
 networks:
   rento-network:
     driver: bridge
+    # 自定义网络，支持服务间通信
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
