fix: 修复GitHub Actions构建失败问题
主要修复:
- 🔧 修复TypeScript类型错误: generate-bills/route.ts中的类型注解
- ⚙️ 更新next.config.ts: 使用serverExternalPackages替代experimental配置
- 🗄️ 修复数据库URL配置: 正确的SQLite文件路径
- 📄 禁用静态生成: 为数据库依赖页面添加dynamic='force-dynamic'
- 🏗️ 解决构建时预渲染错误: 避免构建时访问数据库

技术改进:
- TypeScript类型安全增强
- Next.js 15兼容性配置
- 构建流程优化
- 数据库连接稳定性提升

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
 # ===========================================
 # 数据库配置 - 开发环境使用 SQLite
 # ===========================================
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="file:./prisma/dev.db"
 
 # ===========================================
 # 应用基础配置
