--- a/.env.production
+++ b/.env.production
@@ -20,7 +20,7 @@ NEXTAUTH_SECRET=your-super-secret-key-here-32-chars-minimum
 # ===========================================
 # 数据库配置 (PostgreSQL)
 # ===========================================
-DATABASE_URL="postgresql://rento:your-secure-password@postgres:5432/rento_production"
+DATABASE_URL=postgresql://rento:your-secure-password@postgres:5432/rento_production
 
 # PostgreSQL 服务配置
 POSTGRES_DB=rento_production
