feat: 统一Docker编排配置，优化部署流程
主要改进:
- 🔧 合并docker-compose.yml和docker-compose.prod.yml为单一文件
- 📦 增强环境变量支持，提高配置灵活性
- 🏗️ 统一容器命名规范，支持多环境部署
- ⚙️ 修复GitHub Actions工作流引用
- 📝 更新环境变量模板和部署说明

技术优化:
- 使用CONTAINER_PREFIX环境变量支持容器名称自定义
- 增加APP_PORT、POSTGRES_PORT等端口配置选项
- 保持完整的PostgreSQL性能优化配置
- 支持profiles控制Nginx服务启用
- 统一开发、测试、生产环境的部署流程

解决问题:
- 消除两个Docker Compose文件的冗余和混乱
- 修复GitHub Actions构建失败问题
- 简化部署配置管理

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -61,7 +61,7 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
           mkdir -p deployment
-          cp docker-compose.prod.yml deployment/
+          cp docker-compose.yml deployment/
           cp .env.example deployment/.env.template
           echo "IMAGE_TAG=${{ steps.meta.outputs.tags }}" >> deployment/.env.template
 
