--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,15 @@
 # - 备选使用: docker-compose up -d
 
 # ===========================================
+# 容器配置 (可选)
+# ===========================================
+# 容器名称前缀 (用于区分不同环境)
+# CONTAINER_PREFIX=rento
+
+# 应用端口映射
+# APP_PORT=3001
+
+# ===========================================
 # 应用基础配置
 # ===========================================
 NODE_ENV=production
@@ -85,5 +94,5 @@ REQUEST_TIMEOUT=30000
 #    - Podman (推荐): podman-compose up -d
 #    - Docker (备选): docker-compose up -d
 # 6. 数据库迁移：
-#    - Podman: podman exec -it rento-app-1 /app/scripts/migrate-and-seed.sh
-#    - Docker: docker exec -it rento-app-1 /app/scripts/migrate-and-seed.sh
+#    - Podman: podman exec -it rento-app /app/scripts/migrate-and-seed.sh
+#    - Docker: docker exec -it rento-app /app/scripts/migrate-and-seed.sh
