feat: 大幅简化环境配置和部署文档
主要优化:
- 🔧 删除冗余的.env.production文件，避免混乱
- 📝 优化.env.example，提供安全的默认值和清晰说明
- 🚀 简化DEPLOYMENT.md，突出5分钟快速部署
- 📖 精简ENVIRONMENT_GUIDE.md，减少复杂性
- ⚡ 新增QUICK_START.md，提供最简化部署流程
- 🎯 更新README.md，突出快速开始

技术改进:
- 使用预生成的安全密钥和密码
- 清晰的配置项分类和说明
- 简化的部署步骤和故障排除
- 统一的文档结构和用户体验

解决问题:
- 消除多个环境配置文件的混乱
- 简化复杂的部署说明
- 提供清晰的默认配置值
- 减少用户配置负担

--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,45 @@
-# Rento 环境变量配置模板
-# 复制此文件为 .env 并根据部署环境修改相应的值
+# Rento 环境配置模板
+# 复制此文件为 .env 并根据需要修改配置
 # 
-# 部署方式：
-# - 推荐使用: podman-compose up -d
-# - 备选使用: docker-compose up -d
+# 快速开始：
+# 1. cp .env.example .env
+# 2. 修改必要的密码和密钥（见下方标记）
+# 3. podman-compose up -d 或 docker-compose up -d
 
 # ===========================================
-# 容器配置 (可选)
-# ===========================================
-# 容器名称前缀 (用于区分不同环境)
-# CONTAINER_PREFIX=rento
-
-# 应用端口映射
-# APP_PORT=3001
-
-# ===========================================
-# 应用基础配置
+# 🔧 基础配置
 # ===========================================
 NODE_ENV=production
 PORT=3001
 NEXTAUTH_URL=http://localhost:3001
-NEXTAUTH_SECRET=your-nextauth-secret-change-this-in-production
+
+# 🔑 必须修改：NextAuth 密钥（用于会话加密）
+NEXTAUTH_SECRET=khTS9kBVbH8Gk+TkMv+mKWrRyuvEz9v8twk/TRSvI5A=
 
 # ===========================================
-# 数据库配置
+# 🗄️ 数据库配置
 # ===========================================
-# 开发环境 - SQLite (本地开发推荐)
-# DATABASE_URL="file:./dev.db"
+# 开发环境：使用 SQLite（取消注释下面一行，注释 PostgreSQL 配置）
+# DATABASE_URL="file:./prisma/dev.db"
 
-# 生产环境 - PostgreSQL (容器部署推荐)
-DATABASE_URL=postgresql://rento:your-secure-password@postgres:5432/rento_production
+# 生产环境：使用 PostgreSQL（默认配置）
+DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB/8TCISlPA==@postgres:5432/rento_production
+
+# PostgreSQL 容器配置
 POSTGRES_DB=rento_production
 POSTGRES_USER=rento
-POSTGRES_PASSWORD=your-secure-password-here
-
-# 可选：自定义数据库端口
-# POSTGRES_PORT=5432
+# 🔑 必须修改：数据库密码（与上面 DATABASE_URL 中的密码保持一致）
+POSTGRES_PASSWORD=ZCHHYaFeRj1dB/8TCISlPA==
 
 # ===========================================
-# 应用服务配置
-# ===========================================
-BACKUP_DIR=/app/backups
-LOG_DIR=/app/logs
-
-# 可选：Redis缓存配置
-REDIS_URL=redis://redis:6379
-# REDIS_PORT=6379
-
-# ===========================================
-# 监控和日志配置
+# 📊 监控和日志
 # ===========================================
 ENABLE_MONITORING=true
 PERFORMANCE_MONITORING=true
 LOG_LEVEL=info
 
 # ===========================================
-# 安全配置
+# 🔒 安全配置
 # ===========================================
 ALLOWED_ORIGINS=http://localhost:3001
 CORS_ENABLED=true
@@ -63,36 +47,62 @@ MAX_REQUEST_SIZE=10mb
 REQUEST_TIMEOUT=30000
 
 # ===========================================
-# 网络端口配置 (可选)
+# 📁 可选配置（通常不需要修改）
 # ===========================================
+# 容器名称前缀
+# CONTAINER_PREFIX=rento
+
+# 端口映射
+# APP_PORT=3001
+# POSTGRES_PORT=5432
+# REDIS_PORT=6379
+
+# 服务目录
+BACKUP_DIR=/app/backups
+LOG_DIR=/app/logs
+
+# Redis 缓存
+REDIS_URL=redis://redis:6379
+
+# 网络端口（生产环境）
 # HTTP_PORT=80
 # HTTPS_PORT=443
 
 # ===========================================
-# 邮件配置 (可选，用于告警通知)
+# 📧 高级配置（可选，用于生产环境告警）
 # ===========================================
-# SMTP_HOST=smtp.your-provider.com
+# 邮件通知配置
+# SMTP_HOST=smtp.gmail.com
 # SMTP_PORT=587
-# SMTP_USER=your-email@domain.com
-# SMTP_PASS=your-email-password
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
 # ALERT_EMAIL=admin@your-domain.com
 
-# ===========================================
-# SSL配置 (生产环境)
-# ===========================================
+# SSL 证书路径（使用 Nginx 时）
 # SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
 # SSL_KEY_PATH=/etc/nginx/ssl/key.pem
 
 # ===========================================
-# 部署说明
+# 📝 配置说明
 # ===========================================
-# 1. 复制此文件为 .env: cp .env.example .env
-# 2. 根据部署环境修改相应配置
-# 3. 开发环境：使用 SQLite 数据库，设置 NODE_ENV=development
-# 4. 生产环境：使用 PostgreSQL 数据库，设置 NODE_ENV=production
-# 5. 启动服务：
-#    - Podman (推荐): podman-compose up -d
-#    - Docker (备选): docker-compose up -d
-# 6. 数据库迁移：
-#    - Podman: podman exec -it rento-app /app/scripts/migrate-and-seed.sh
-#    - Docker: docker exec -it rento-app /app/scripts/migrate-and-seed.sh
+# 
+# 🚀 快速部署：
+#   1. 复制配置：cp .env.example .env
+#   2. 启动服务：podman-compose up -d
+#   3. 数据迁移：podman exec -it rento-app /app/scripts/migrate-and-seed.sh
+#   4. 访问应用：http://localhost:3001
+# 
+# 🔧 开发环境：
+#   - 设置 NODE_ENV=development
+#   - 使用 SQLite：DATABASE_URL="file:./prisma/dev.db"
+#   - 关闭监控：ENABLE_MONITORING=false
+# 
+# 🌐 生产环境：
+#   - 修改 NEXTAUTH_URL 为实际域名
+#   - 修改 ALLOWED_ORIGINS 为实际域名
+#   - 确保使用强密码和密钥
+# 
+# 🔐 安全提醒：
+#   - NEXTAUTH_SECRET：用于会话加密，必须修改
+#   - POSTGRES_PASSWORD：数据库密码，必须与 DATABASE_URL 中一致
+#   - 生产环境请使用 HTTPS 和强密码
