fix: 修复数据库配置不一致问题
- 更新prisma schema使用PostgreSQL而非SQLite
- 配置正确的环境变量支持局域网访问
- 修复docker-compose网络配置
- 准备使用GitHub Actions云端构建

--- a/.env
+++ b/.env
@@ -1,32 +1,70 @@
-# Rento 开发环境配置
-# 当前环境：本地开发 (Ubuntu 24)
-# 容器运行时：推荐使用 Podman
-
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Rento 环境配置 - 局域网部署
+# 部署环境：Ubuntu 24 开发宿主机
+# 局域网IP：192.168.31.84
+# 容器运行时：Podman
 
 # ===========================================
-# 数据库配置 - 开发环境使用 SQLite
+# 🔧 基础配置
 # ===========================================
-DATABASE_URL="file:./prisma/dev.db"
-
-# ===========================================
-# 应用基础配置
-# ===========================================
-NODE_ENV=development
+NODE_ENV=production
 PORT=3001
-NEXTAUTH_URL=http://localhost:3001
-NEXTAUTH_SECRET=dev-secret-key-change-in-production
+# 🌐 局域网访问配置：使用宿主机IP地址
+NEXTAUTH_URL=http://192.168.31.84:3001
+
+# 🔑 NextAuth 密钥（用于会话加密）
+NEXTAUTH_SECRET=khTS9kBVbH8Gk+TkMv+mKWrRyuvEz9v8twk/TRSvI5A=
 
 # ===========================================
-# 开发环境特定配置
+# 🗄️ 数据库配置
 # ===========================================
-# 开发模式下的日志级别
-LOG_LEVEL=debug
+# 生产环境：使用 PostgreSQL
+DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB/8TCISlPA==@postgres:5432/rento_production
 
-# 开发环境监控 (可选)
-ENABLE_MONITORING=false
-PERFORMANCE_MONITORING=false
+# PostgreSQL 容器配置
+POSTGRES_DB=rento_production
+POSTGRES_USER=rento
+POSTGRES_PASSWORD=ZCHHYaFeRj1dB/8TCISlPA==
+
+# ===========================================
+# 📊 监控和日志
+# ===========================================
+ENABLE_MONITORING=true
+PERFORMANCE_MONITORING=true
+LOG_LEVEL=info
+
+# ===========================================
+# 🔒 安全配置 - 局域网访问
+# ===========================================
+# 允许局域网内所有设备访问
+ALLOWED_ORIGINS=http://192.168.31.84:3001,http://localhost:3001
+CORS_ENABLED=true
+MAX_REQUEST_SIZE=10mb
+REQUEST_TIMEOUT=30000
+
+# ===========================================
+# 📁 服务配置
+# ===========================================
+# 容器名称前缀
+CONTAINER_PREFIX=rento
+
+# 端口映射 - 绑定到所有网络接口
+APP_PORT=3001
+POSTGRES_PORT=5432
+REDIS_PORT=6379
+
+# 服务目录
+BACKUP_DIR=/app/backups
+LOG_DIR=/app/logs
+
+# Redis 缓存
+REDIS_URL=redis://redis:6379
+
+# ===========================================
+# 🌐 网络配置
+# ===========================================
+# 宿主机IP地址
+HOST_IP=192.168.31.84
+
+# HTTP端口（生产环境可选）
+HTTP_PORT=80
+HTTPS_PORT=443
