--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,7 +137,7 @@ volumes:
 networks:
   rento-network:
     driver: bridge
-    # 自定义网络，支持服务间通信
+    # 修改网段避免冲突
     ipam:
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: 172.25.0.0/16
