chore(deploy): include Prisma CLI in runtime; add postgresql-client for pg_isready; fix DATABASE_URL encoding and compose variable; adjust ports for rootless podman

--- a/.env
+++ b/.env
@@ -17,8 +17,10 @@ NEXTAUTH_SECRET=khTS9kBVbH8Gk+TkMv+mKWrRyuvEz9v8twk/TRSvI5A=
 # ===========================================
 # 🗄️ 数据库配置
 # ===========================================
-# 生产环境：使用 PostgreSQL
-DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB/8TCISlPA==@postgres:5432/rento_production
+# 生产环境：使用 PostgreSQL（注意：对密码进行 URL 编码）
+# 原始密码：ZCHHYaFeRj1dB/8TCISlPA==
+# 编码后：ZCHHYaFeRj1dB%2F8TCISlPA%3D%3D
+DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB%2F8TCISlPA%3D%3D@postgres:5432/rento_production
 
 # PostgreSQL 容器配置
 POSTGRES_DB=rento_production
@@ -66,5 +68,5 @@ REDIS_URL=redis://redis:6379
 HOST_IP=192.168.31.84
 
 # HTTP端口（生产环境可选）
-HTTP_PORT=80
-HTTPS_PORT=443
+HTTP_PORT=8080
+HTTPS_PORT=8443
