--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,11 @@ NEXTAUTH_SECRET=khTS9kBVbH8Gk+TkMv+mKWrRyuvEz9v8twk/TRSvI5A=
 # DATABASE_URL="file:./prisma/dev.db"
 
 # 生产环境：使用 PostgreSQL（默认配置）
-DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB/8TCISlPA==@postgres:5432/rento_production
+# 注意：如果密码包含特殊字符（如 '/'、'='、'@' 等），必须进行 URL 编码
+# 例如：原始密码 'ZCHHYaFeRj1dB/8TCISlPA==' 编码为 'ZCHHYaFeRj1dB%2F8TCISlPA%3D%3D'
+# 示例：
+# DATABASE_URL=postgresql://rento:ZCHHYaFeRj1dB%2F8TCISlPA%3D%3D@postgres:5432/rento_production
+DATABASE_URL=postgresql://rento:YOUR_PASSWORD@postgres:5432/rento_production
 
 # PostgreSQL 容器配置
 POSTGRES_DB=rento_production
@@ -67,6 +71,9 @@ REDIS_URL=redis://redis:6379
 # 网络端口（生产环境）
 # HTTP_PORT=80
 # HTTPS_PORT=443
+# Podman（rootless）环境建议使用非特权端口：
+# HTTP_PORT=8080
+# HTTPS_PORT=8443
 
 # ===========================================
 # 📧 高级配置（可选，用于生产环境告警）
