chore(deploy): add cloud deployment script and enforce API CORS/limits
- Add scripts/cloud-deploy.sh for one-command cloud deploy

- Update DEPLOYMENT.md, README.md, ENVIRONMENT_GUIDE.md with detailed steps

- Add nginx/nginx.conf sample reverse proxy for production

- Align ports and health checks in docker-compose.yml and Dockerfile

- Enforce CORS, preflight, request size and timeout in src/lib/api-error-handler.ts

- Clarify and harden health endpoint behavior in src/app/api/health/route.ts

- Update .env.example with CORS_ENABLED, ALLOWED_ORIGINS, MAX_REQUEST_SIZE, REQUEST_TIMEOUT

- Improve scripts/migrate-and-seed.sh for non-interactive cloud runs

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,16 @@
 # 快速开始：
 # 1. cp .env.example .env
 # 2. 修改必要的密码和密钥（见下方标记）
-# 3. podman-compose up -d 或 docker-compose up -d
+# 3. 本地部署：podman-compose up -d 或 docker-compose up -d
+# 4. 云部署（推荐脚本）：chmod +x scripts/cloud-deploy.sh && ./scripts/cloud-deploy.sh your-domain.com
 
 # ===========================================
 # 🔧 基础配置
 # ===========================================
 NODE_ENV=production
-PORT=3001
+# 应用容器内部监听端口（保持与健康检查一致）
+APP_INTERNAL_PORT=3001
+# NextAuth 应用外部访问地址（本地默认 http://localhost:3001）
 NEXTAUTH_URL=http://localhost:3001
 
 # 🔑 必须修改：NextAuth 密钥（用于会话加密）
@@ -58,6 +61,8 @@ REQUEST_TIMEOUT=30000
 
 # 端口映射
 # APP_PORT=3001
+# 上述 APP_PORT 是宿主机对外暴露端口；容器内应用监听端口为 APP_INTERNAL_PORT（默认 3001）。
+# 两者保持一致可简化健康检查与代理配置。
 # POSTGRES_PORT=5432
 # REDIS_PORT=6379
 
@@ -74,6 +79,9 @@ REDIS_URL=redis://redis:6379
 # Podman（rootless）环境建议使用非特权端口：
 # HTTP_PORT=8080
 # HTTPS_PORT=8443
+# 如需启用 Nginx 反向代理，请使用 Compose Profiles：
+# podman-compose --profile nginx up -d
+# docker-compose --profile nginx up -d
 
 # ===========================================
 # 📧 高级配置（可选，用于生产环境告警）
@@ -107,6 +115,7 @@ REDIS_URL=redis://redis:6379
 # 🌐 生产环境：
 #   - 修改 NEXTAUTH_URL 为实际域名
 #   - 修改 ALLOWED_ORIGINS 为实际域名
+#   - 如使用 Nginx，请启用 profile 并配置 SSL 证书到 ./nginx/ssl
 #   - 确保使用强密码和密钥
 # 
 # 🔐 安全提醒：
